src/Compiler/Parser/GeneratedFiles/TestParser.java
/* TestParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. TestParser.java */
package Compiler.Parser.GeneratedFiles;

import Compiler.Parser.CustomVisitors.FunctionVisitor;import Compiler.Parser.CustomVisitors.PrintVisitor;import Compiler.Parser.whatever;
import Compiler.SymbolTable.Table.Symbol.TypeDescriptor.ClassTypeDescriptor.GraphElements.EdgeTypeDescriptor.EdgeTypeDescriptor;
import Compiler.SymbolTable.Table.SymbolTable;import java.io.BufferedReader;
import java.io.File;
import java.io.FileReader;

public class TestParser/*@bgen(jjtree)*/implements TestParserTreeConstants, TestParserConstants {/*@bgen(jjtree)*/
  protected JJTTestParserState jjtree = new JJTTestParserState();public static void main(String[] args) {
        try {
            //System.out.println(parseTextFile("src/Compiler/Parser/test"));
            //useVisitorMethod(new PrintVisitor(), "src/Compiler/Parser/test", null);
            SymbolTable st = new SymbolTable();
            st.openScope();
            useVisitorMethod(new FunctionVisitor(), "src/Compiler/Parser/test", st);
        } catch (Exception e) {
            e.printStackTrace();
        }
    }

    public static String parseTextFile(String filePath) throws Exception {
        Node root = createParseTree(filePath);
        return whatever.createDotOutput(root);
  }

    public static void useVisitorMethod(TestParserVisitor visitor, String filePath, Object data) throws Exception {
        Node root = createParseTree(filePath);
        root.jjtAccept(visitor, data);
    }

    private static Node createParseTree(String filePath) throws Exception {
        File file = new File(filePath);
        BufferedReader reader = new BufferedReader(new FileReader(file));
        TestParser parser = new TestParser(reader);
        return parser.start();
    }

  void skip_to_first_dcl() throws ParseException {Token tok;
      while (true) {
        tok = getToken(1);
        if (tok.kind != NEWLINE)
            break;
        tok = getNextToken();
      }
  }

  void skip_to_EOF() throws ParseException {Token tok;
      while (true) {
        tok = getToken(1);
        if (tok.kind == EOF)
            break;
        else if (tok.kind != NEWLINE)
            throw new ParseException("Encountered '" + tok.kind + "'. Was expecting: '<NEWLINE>' or '<EOF>'");
        tok = getNextToken();
      }
  }

  final public SimpleNode start() throws ParseException {/*@bgen(jjtree) START */
  ASTSTART jjtn000 = new ASTSTART(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      prog();
jjtree.closeNodeScope(jjtn000, true);
           jjtc000 = false;
           jjtn000.jjtSetLastToken(getToken(0));
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
      jjtn000.jjtSetLastToken(getToken(0));
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void prog() throws ParseException {/*@bgen(jjtree) #PROG(> 1) */
  ASTPROG jjtn000 = new ASTPROG(JJTPROG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      skip_to_first_dcl();
      vertex_edge_attributes();
      main();
      newlines_plus();
ASTFUNCS_DCL jjtn001 = new ASTFUNCS_DCL(JJTFUNCS_DCL);
                                                                          boolean jjtc001 = true;
                                                                          jjtree.openNodeScope(jjtn001);
                                                                          jjtn001.jjtSetFirstToken(getToken(1));
      try {
        funcs_dcl();
      } catch (Throwable jjte001) {
if (jjtc001) {
                                                                            jjtree.clearNodeScope(jjtn001);
                                                                            jjtc001 = false;
                                                                          } else {
                                                                            jjtree.popNode();
                                                                          }
                                                                          if (jjte001 instanceof RuntimeException) {
                                                                            {if (true) throw (RuntimeException)jjte001;}
                                                                          }
                                                                          if (jjte001 instanceof ParseException) {
                                                                            {if (true) throw (ParseException)jjte001;}
                                                                          }
                                                                          {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                                                                            jjtree.closeNodeScope(jjtn001, jjtree.nodeArity() > 1);
                                                                            jjtn001.jjtSetLastToken(getToken(0));
                                                                          }
      }
      skip_to_EOF();
      jj_consume_token(0);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void newlines_plus() throws ParseException {
    jj_consume_token(NEWLINE);
    newlines_star();
  }

  final public void newlines_star() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NEWLINE:{
      jj_consume_token(NEWLINE);
      newlines_star();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      empty();
    }
  }

  final public void vertex_edge_attributes() throws ParseException {/*@bgen(jjtree) #VERTEX_EDGE_ATTR(> 1) */
  ASTVERTEX_EDGE_ATTR jjtn000 = new ASTVERTEX_EDGE_ATTR(JJTVERTEX_EDGE_ATTR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VERTEX:{
        vertex_attributes();
        break;
        }
      case EDGE:{
        edge_attributes();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        newlines_star();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }

  final public void vertex_attributes() throws ParseException {
ASTVERTEX_ATTRIBUTES jjtn001 = new ASTVERTEX_ATTRIBUTES(JJTVERTEX_ATTRIBUTES);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      jjtn001.jjtSetFirstToken(getToken(1));
    try {
      vertex_attr_dcl();
    } catch (Throwable jjte001) {
if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
        jjtn001.jjtSetLastToken(getToken(0));
      }
    }
    newlines_star();
ASTEDGE_ATTRIBUTES jjtn002 = new ASTEDGE_ATTRIBUTES(JJTEDGE_ATTRIBUTES);
                                                           boolean jjtc002 = true;
                                                           jjtree.openNodeScope(jjtn002);
                                                           jjtn002.jjtSetFirstToken(getToken(1));
    try {
      vertex_attr_tail();
    } catch (Throwable jjte002) {
if (jjtc002) {
                                                             jjtree.clearNodeScope(jjtn002);
                                                             jjtc002 = false;
                                                           } else {
                                                             jjtree.popNode();
                                                           }
                                                           if (jjte002 instanceof RuntimeException) {
                                                             {if (true) throw (RuntimeException)jjte002;}
                                                           }
                                                           if (jjte002 instanceof ParseException) {
                                                             {if (true) throw (ParseException)jjte002;}
                                                           }
                                                           {if (true) throw (Error)jjte002;}
    } finally {
if (jjtc002) {
                                                             jjtree.closeNodeScope(jjtn002, true);
                                                             jjtn002.jjtSetLastToken(getToken(0));
                                                           }
    }
  }

  final public void vertex_attr_dcl() throws ParseException {
    jj_consume_token(VERTEX);
    jj_consume_token(DCL);
    jj_consume_token(NEWLINE);
    attribute_dcl();
    jj_consume_token(END);
  }

  final public void vertex_attr_tail() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EDGE:{
      edge_attr_dcl();
      newlines_star();
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      empty();
    }
  }

  final public void edge_attributes() throws ParseException {
ASTEDGE_ATTRIBUTES jjtn001 = new ASTEDGE_ATTRIBUTES(JJTEDGE_ATTRIBUTES);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      jjtn001.jjtSetFirstToken(getToken(1));
    try {
      edge_attr_dcl();
    } catch (Throwable jjte001) {
if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
    } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
        jjtn001.jjtSetLastToken(getToken(0));
      }
    }
    newlines_star();
ASTVERTEX_ATTRIBUTES jjtn002 = new ASTVERTEX_ATTRIBUTES(JJTVERTEX_ATTRIBUTES);
                                                       boolean jjtc002 = true;
                                                       jjtree.openNodeScope(jjtn002);
                                                       jjtn002.jjtSetFirstToken(getToken(1));
    try {
      edge_attr_tail();
    } catch (Throwable jjte002) {
if (jjtc002) {
                                                         jjtree.clearNodeScope(jjtn002);
                                                         jjtc002 = false;
                                                       } else {
                                                         jjtree.popNode();
                                                       }
                                                       if (jjte002 instanceof RuntimeException) {
                                                         {if (true) throw (RuntimeException)jjte002;}
                                                       }
                                                       if (jjte002 instanceof ParseException) {
                                                         {if (true) throw (ParseException)jjte002;}
                                                       }
                                                       {if (true) throw (Error)jjte002;}
    } finally {
if (jjtc002) {
                                                         jjtree.closeNodeScope(jjtn002, true);
                                                         jjtn002.jjtSetLastToken(getToken(0));
                                                       }
    }
  }

  final public void edge_attr_dcl() throws ParseException {
    jj_consume_token(EDGE);
    jj_consume_token(DCL);
    jj_consume_token(NEWLINE);
    attribute_dcl();
    jj_consume_token(END);
  }

  final public void edge_attr_tail() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VERTEX:{
      vertex_attr_dcl();
      newlines_star();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      empty();
    }
  }

  final public void attribute_dcl() throws ParseException {/*@bgen(jjtree) #ATTRIBUTE_DCL(> 1) */
  ASTATTRIBUTE_DCL jjtn000 = new ASTATTRIBUTE_DCL(JJTATTRIBUTE_DCL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
  jjtn000.jjtSetFirstToken(getToken(1));
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case REAL:
      case BOOLEAN:{
ASTDCL jjtn001 = new ASTDCL(JJTDCL);
      boolean jjtc001 = true;
      jjtree.openNodeScope(jjtn001);
      jjtn001.jjtSetFirstToken(getToken(1));
        try {
          simple_types();
          identifier();
          initialization();
          jj_consume_token(NEWLINE);
        } catch (Throwable jjte001) {
if (jjtc001) {
        jjtree.clearNodeScope(jjtn001);
        jjtc001 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte001 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte001;}
      }
      if (jjte001 instanceof ParseException) {
        {if (true) throw (ParseException)jjte001;}
      }
      {if (true) throw (Error)jjte001;}
        } finally {
if (jjtc001) {
        jjtree.closeNodeScope(jjtn001, true);
        jjtn001.jjtSetLastToken(getToken(0));
      }
        }
        attribute_dcl();
        break;
        }
      case VERTEX:
      case EDGE:
      case MAP:
      case GRAPH_TYPE:
      case COLLECTION_TYPE:{
ASTOBJECT_TYPE jjtn002 = new ASTOBJECT_TYPE(JJTOBJECT_TYPE);
                                                                                         boolean jjtc002 = true;
                                                                                         jjtree.openNodeScope(jjtn002);
                                                                                         jjtn002.jjtSetFirstToken(getToken(1));
        try {
          object_types();
          identifier();
          jj_consume_token(NEWLINE);
        } catch (Throwable jjte002) {
if (jjtc002) {
                                                                                           jjtree.clearNodeScope(jjtn002);
                                                                                           jjtc002 = false;
                                                                                         } else {
                                                                                           jjtree.popNode();
                                                                                         }
                                                                                         if (jjte002 instanceof RuntimeException) {
                                                                                           {if (true) throw (RuntimeException)jjte002;}
                                                                                         }
                                                                                         if (jjte002 instanceof ParseException) {
                                                                                           {if (true) throw (ParseException)jjte002;}
                                                                                         }
                                                                                         {if (true) throw (Error)jjte002;}
        } finally {
if (jjtc002) {
                                                                                           jjtree.closeNodeScope(jjtn002, true);
                                                                                           jjtn002.jjtSetLastToken(getToken(0));
                                                                                         }
        }
        attribute_dcl();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        empty();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
        jjtn000.jjtSetLastToken(getToken(0));
      }
    }
  }
